improved log messages